crates/smart-config/tests/ui/derives/cannot_derive_default.rs
use smart_config::DescribeConfig;

#[derive(DescribeConfig)]
#[config(derive(Default))]
struct TestConfig {
    field: u64,
}

fn main() {}
